--- a/foundation/WebRoot/WEB-INF/log4j.properties
+++ b/foundation/WebRoot/WEB-INF/log4j.properties
@@ -4,5 +4,5 @@ log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
 
-log4j.rootLogger=debug, stdout
-log4j.logger.footmark=debug
+log4j.rootLogger=all, stdout
+log4j.logger.footmark=all
