--- a/foundation/WebRoot/WEB-INF/web.xml
+++ b/foundation/WebRoot/WEB-INF/web.xml
@@ -38,7 +38,6 @@
         <filter-name>AdminFilter</filter-name>
         <url-pattern>/view/admin/*</url-pattern>
     </filter-mapping>
-
     <filter>
         <filter-name>encodingFilter</filter-name>
         <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
@@ -91,4 +90,7 @@
         <error-code>404</error-code>
         <location>/api/error/404</location>
     </error-page>
+    <welcome-file-list>
+        <welcome-file>/admin/index</welcome-file>
+    </welcome-file-list>
 </web-app>
