--- a/foundation/pom.xml
+++ b/foundation/pom.xml
@@ -108,6 +108,11 @@
 			<version>2.2</version>
 			<scope>provided</scope>
 		</dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
 	</dependencies>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
