--- a/foundation/src/application.properties
+++ b/foundation/src/application.properties
@@ -19,7 +19,7 @@
 
 #mysql database setting
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://127.0.0.1:3306/bainong?useUnicode=true&characterEncoding=utf-8
+jdbc.url=jdbc:mysql://127.0.0.1:3306/foundation?useUnicode=true&characterEncoding=utf-8
 jdbc.username=root
 jdbc.password=55688898
 
