--- a/foundation/WebRoot/WEB-INF/web.xml
+++ b/foundation/WebRoot/WEB-INF/web.xml
@@ -38,6 +38,17 @@
         <filter-name>AdminFilter</filter-name>
         <url-pattern>/view/admin/*</url-pattern>
     </filter-mapping>
+
+    <filter>
+        <display-name>UserFilter</display-name>
+        <filter-name>UserFilter</filter-name>
+        <filter-class>com.maneater.foundation.filter.UserFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>UserFilter</filter-name>
+        <url-pattern>/user/*</url-pattern>
+    </filter-mapping>
+
     <filter>
         <filter-name>encodingFilter</filter-name>
         <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
@@ -80,17 +91,17 @@
     </session-config>
     <error-page>
         <exception-type>java.lang.Throwable</exception-type>
-        <location>/api/error/500</location>
+        <location>/view/error/500.jsp</location>
     </error-page>
     <error-page>
         <error-code>500</error-code>
-        <location>/api/error/500</location>
+        <location>/view/error/500.jsp</location>
     </error-page>
     <error-page>
         <error-code>404</error-code>
-        <location>/api/error/404</location>
+        <location>/view/error/404.jsp</location>
     </error-page>
     <welcome-file-list>
-        <welcome-file>/admin/index</welcome-file>
+        <welcome-file>/</welcome-file>
     </welcome-file-list>
 </web-app>
