--- a/foundation/WebRoot/WEB-INF/log4j.properties
+++ b/foundation/WebRoot/WEB-INF/log4j.properties
@@ -5,4 +5,6 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
 
 log4j.rootLogger=debug, stdout
-log4j.logger.footmark=all
+#log4j.logger.org.springframework=error,stdout
+#log4j.logger.footmark=all
+
