--- a/foundation/WebRoot/WEB-INF/web.xml
+++ b/foundation/WebRoot/WEB-INF/web.xml
@@ -18,6 +18,10 @@
         <param-name>log4jConfigLocation</param-name>
         <param-value>/WEB-INF/log4j.properties</param-value>
     </context-param>
+
+    <listener>
+        <listener-class>com.maneater.foundation.listener.StartUpListener</listener-class>
+    </listener>
     <listener>
         <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
     </listener>
