--- a/foundation/WebRoot/WEB-INF/web.xml
+++ b/foundation/WebRoot/WEB-INF/web.xml
@@ -60,6 +60,16 @@
         <url-pattern>/user/*</url-pattern>
     </filter-mapping>
 
+    <filter-mapping>
+        <filter-name>UserFilter</filter-name>
+        <url-pattern>/front/room/*</url-pattern>
+    </filter-mapping>
+
+    <filter-mapping>
+        <filter-name>UserFilter</filter-name>
+        <url-pattern>/front/furniture/*</url-pattern>
+    </filter-mapping>
+
     <filter>
         <filter-name>encodingFilter</filter-name>
         <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
