--- a/foundation/pom.xml
+++ b/foundation/pom.xml
@@ -35,6 +35,13 @@
             <artifactId>spring-data-jpa</artifactId>
             <version>1.6.0.RELEASE</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-mongodb</artifactId>
+            <version>1.5.0.RELEASE</version>
+        </dependency>
+
         <dependency>
             <groupId>org.hibernate.javax.persistence</groupId>
             <artifactId>hibernate-jpa-2.0-api</artifactId>
